# advanced-rag-system

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
graph/: __init__.py  graph.py  state.py
graph/node/: __init__.py  generation.py  grade_document.py
graph/node_and_chain/: __init__.py  answer_checker.py  document_check.py  generation.py  hallucination_checker.py  retrieve.py  router.py  web_search.py
